# rota

./: Cargo.toml  LICENSE  README.md  justfile
config/: cosmic.kdl  rota.service
src/: config.rs  libinput.rs  main.rs  runtime.rs
src/iio/: compass.rs  mod.rs  sensor_proxy.rs
